--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "opinionated-safe-code-normalizer",
+  "name": "@smarlhens/opinionated-safe-code-normalizer",
   "version": "1.0.0",
   "description": "TypeScript opinionated safe code normalizer using ts-morph & ESLint",
   "scripts": {
@@ -38,5 +38,14 @@
     "lint-staged": "11.0.0",
     "prettier": "2.3.2",
     "typescript": "4.3.5"
-  }
+  },
+  "main": "src/index.ts",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/smarlhens/opinionated-safe-code-normalizer.git"
+  },
+  "bugs": {
+    "url": "https://github.com/smarlhens/opinionated-safe-code-normalizer/issues"
+  },
+  "homepage": "https://github.com/smarlhens/opinionated-safe-code-normalizer#readme"
 }
