--- a/package.json
+++ b/package.json
@@ -31,9 +31,13 @@
     "yargs": "17.0.1"
   },
   "devDependencies": {
+    "@commitlint/cli": "12.1.4",
+    "@commitlint/config-conventional": "12.1.4",
     "@types/eslint": "7.2.14",
     "@types/node": "16.0.0",
     "@types/yargs": "17.0.2",
+    "commitizen": "4.2.4",
+    "cz-conventional-changelog": "3.3.0",
     "husky": "7.0.1",
     "lint-staged": "11.0.0",
     "prettier": "2.3.2",
