--- a/.releaserc.json
+++ b/.releaserc.json
@@ -3,8 +3,19 @@
   "plugins": [
     "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
-    "@semantic-release/npm",
-    "@semantic-release/github",
+    [
+      "@semantic-release/npm",
+      {
+        "tarballDir": "release"
+      }
+    ],
+    [
+      "@semantic-release/github",
+      {
+        "addReleases": "top",
+        "assets": "release/*.tgz"
+      }
+    ],
     "@semantic-release/git",
     "@semantic-release/changelog"
   ]
