--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node: ['16.x', '14.x', '12.x', '10.x']
+        node: ['16.x', '14.x', '12.x']
 
     steps:
       - name: Checkout source code
