--- a/package.json
+++ b/package.json
@@ -2,19 +2,6 @@
   "name": "@smarlhens/opinionated-safe-code-normalizer",
   "version": "1.0.39",
   "description": "TypeScript opinionated safe code normalizer using ts-morph & ESLint",
-  "scripts": {
-    "dev": "ts-node src/index.ts",
-    "build": "tsc",
-    "precommit": "lint-staged && npm run build",
-    "prepare": "husky install",
-    "prettier:check": "prettier --check ./**/*.ts",
-    "prettier:write": "prettier --write ./**/*.ts",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "semantic-release": "semantic-release"
-  },
-  "bin": {
-    "oscn": "dist/index.js"
-  },
   "keywords": [
     "normalizer",
     "autofixer",
@@ -22,41 +9,54 @@
     "eslint",
     "ts-morph"
   ],
-  "author": "Samuel MARLHENS <samuel.marlhens@gmail.com> (https://smarlhens.github.io)",
-  "license": "Apache-2.0",
-  "dependencies": {
-    "eslint": "8.16.0",
-    "ts-morph": "12.2.0",
-    "ts-node": "10.8.0",
-    "tslib": "2.4.0",
-    "yargs": "17.5.1"
+  "homepage": "https://github.com/smarlhens/opinionated-safe-code-normalizer#readme",
+  "bugs": {
+    "url": "https://github.com/smarlhens/opinionated-safe-code-normalizer/issues"
   },
-  "devDependencies": {
-    "@commitlint/cli": "16.3.0",
-    "@commitlint/config-conventional": "16.2.4",
-    "@semantic-release/changelog": "5.0.1",
-    "@semantic-release/git": "9.0.1",
-    "@types/eslint": "8.4.2",
-    "@types/node": "16.11.38",
-    "@types/yargs": "17.0.10",
-    "commitizen": "4.2.4",
-    "cz-conventional-changelog": "3.3.0",
-    "husky": "7.0.4",
-    "lint-staged": "11.2.6",
-    "prettier": "2.6.2",
-    "semantic-release": "17.4.7",
-    "typescript": "4.7.2"
-  },
-  "main": "src/index.ts",
   "repository": {
     "type": "git",
     "url": "https://github.com/smarlhens/opinionated-safe-code-normalizer.git"
   },
-  "bugs": {
-    "url": "https://github.com/smarlhens/opinionated-safe-code-normalizer/issues"
+  "license": "MIT",
+  "author": "Samuel MARLHENS <samuel.marlhens@gmail.com> (https://smarlhens.github.io)",
+  "main": "src/index.ts",
+  "bin": {
+    "oscn": "dist/index.js"
   },
-  "homepage": "https://github.com/smarlhens/opinionated-safe-code-normalizer#readme",
+  "scripts": {
+    "build": "tsc",
+    "dev": "ts-node src/index.ts",
+    "precommit": "lint-staged && npm run build",
+    "prepare": "husky install",
+    "prettier:check": "prettier --check ./**/*.ts",
+    "prettier:write": "prettier --write ./**/*.ts",
+    "semantic-release": "semantic-release",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "dependencies": {
+    "eslint": "8.18.0",
+    "ts-morph": "15.1.0",
+    "ts-node": "10.8.1",
+    "tslib": "2.4.0",
+    "yargs": "17.5.1"
+  },
+  "devDependencies": {
+    "@commitlint/cli": "17.0.2",
+    "@commitlint/config-conventional": "17.0.2",
+    "@semantic-release/changelog": "6.0.1",
+    "@semantic-release/git": "10.0.1",
+    "@types/eslint": "8.4.3",
+    "@types/node": "18.0.0",
+    "@types/yargs": "17.0.10",
+    "commitizen": "4.2.4",
+    "cz-conventional-changelog": "3.3.0",
+    "husky": "8.0.1",
+    "lint-staged": "13.0.3",
+    "prettier": "2.7.1",
+    "semantic-release": "19.0.3",
+    "typescript": "4.7.4"
+  },
   "engines": {
-    "node": ">=12"
+    "node": "^14.17.0 || >=16.0.0"
   }
 }
